qlazy/lib/c/qlazy.h

typedef enum _Kind {
  CIRC  	 = 1,	 	/* symbol: '&','circ'  */
  GATES  	 = 2,	 	/* symbol: '!','gates' */
  SHOW   	 = 3,	 	/* symbol: '-','show'   */
  BLOCH   	 = 4,	 	/* symbol: '|','bloch' */
  ECHO   	 = 5,	 	/* symbol: '@','echo'  */
  OUTPUT	 = 6,	 	/* symbol: '>','output' */
  HELP    	 = 7,	 	/* symbol: '?','help'   */
  QUIT	         = 8,	 	/* symbol: '.','quit'   */
  INIT  	 = 9,	 	/* symbol: '%','init'   */
  PAULI_X	 = 120,		/* symbol: 'x'          */
  PAULI_Y	 = 121,		/* symbol: 'y'          */
  PAULI_Z	 = 122,		/* symbol: 'z'          */
  ROOT_PAULI_X	 = 123,		/* symbol: 'xr'         */
  ROOT_PAULI_X_	 = 124,		/* symbol: 'xr'         */
  HADAMARD	 = 130,		/* symbol: 'h'          */
  PHASE_SHIFT_S	 = 140,		/* symbol: 's'          */
  PHASE_SHIFT_S_ = 141,		/* symbol: 's_dg'       */
  PHASE_SHIFT_T	 = 142,		/* symbol: 't'          */
  PHASE_SHIFT_T_ = 143,		/* symbol: 'tdg'        */
  PHASE_SHIFT    = 144,		/* symbol: 'p'          */
  ROTATION_X	 = 150,		/* symbol: 'rx'         */
  ROTATION_Y	 = 151,		/* symbol: 'ry'         */
  ROTATION_Z	 = 152,		/* symbol: 'rz'         */
  ROTATION_U1	 = 153,		/* symbol: 'u1'         */
  ROTATION_U2	 = 154,		/* symbol: 'u2'         */
  ROTATION_U3	 = 155,		/* symbol: 'u3'         */
  CONTROLLED_X	 = 160,		/* symbol: 'cx'         */
  CONTROLLED_Y	 = 161,		/* symbol: 'cx'         */
  CONTROLLED_Z	 = 162,		/* symbol: 'cz'         */
  CONTROLLED_XR	 = 163,		/* symbol: 'cxr'        */
  CONTROLLED_XR_ = 164,		/* symbol: 'cxr_dg'     */
  CONTROLLED_H	 = 165,		/* symbol: 'ch'         */
  CONTROLLED_S	 = 166,		/* symbol: 'cs'         */
  CONTROLLED_S_	 = 167,		/* symbol: 'cs_dg'      */
  CONTROLLED_T	 = 168,		/* symbol: 'ct'         */
  CONTROLLED_T_	 = 169,		/* symbol: 'ct_dg'      */
  CONTROLLED_P	 = 170,		/* symbol: 'cp'         */
  CONTROLLED_RX	 = 171,		/* symbol: 'crx'        */
  CONTROLLED_RY	 = 172,		/* symbol: 'cry'        */
  CONTROLLED_RZ	 = 173,		/* symbol: 'crz'        */
  CONTROLLED_U1  = 174,		/* symbol: 'cu1'        */
  CONTROLLED_U2  = 175,		/* symbol: 'cu1'        */
  CONTROLLED_U3  = 176,		/* symbol: 'cu1'        */
  ROTATION_XX    = 180,		/* symbol: 'rxx'        */
  ROTATION_YY    = 181,		/* symbol: 'ryy'        */
  ROTATION_ZZ    = 182,		/* symbol: 'rzz'        */
  SWAP_QUBITS	 = 190,		/* symbol: 'sw'         */
  MEASURE	 = 200,	 	/* symbol: 'm'          */
  MEASURE_X	 = 201,	 	/* symbol: 'mx'         */
  MEASURE_Y	 = 202,	 	/* symbol: 'my'         */
  MEASURE_Z	 = 203,	 	/* symbol: 'mz'         */
  MEASURE_BELL	 = 204,	 	/* symbol: 'mb'         */
  RESET	         = 205,	 	/* symbol: '>','reset'  */
  NOT_A_GATE	 = 1000,
  IDENTITY       = 2000,
} Kind;
typedef struct _QGate {
  Kind			kind;    /* kind of qgate */
  int			qid[2];	 /* array of qubit id */
  double		para[3]; /* array of gate parameters (ex: phases of rotation gate)*/
  int			c;       /* classical register id for storing measurement result (0 or 1) */
  int			ctrl;    /* classical register id for controlling quantum gate */
  struct _QGate*        prev;
  struct _QGate*        next;
} QGate;
typedef struct _QCirc {
  int           qubit_num;
  int           cmem_num;
  int           gate_num;
  QGate*        first;
  QGate*        last;
} QCirc;
/* qcirc.c */
bool qcirc_init(void** qcirc_out);
bool qcirc_copy(QCirc* qcirc, void** qcirc_out);
bool qcirc_merge(QCirc* qcirc_L, QCirc* qcirc_R, void** qcirc_out);
bool qcirc_is_equal(QCirc* qcirc_L, QCirc* qcirc_R, bool* ans);
bool qcirc_kind_first(QCirc* qcirc, Kind* kind);
bool qcirc_append_gate(QCirc* qcirc, Kind kind, int* qid, double* para, int c, int ctrl);
bool qcirc_pop_gate(QCirc* qcirc, Kind* kind, int* qid, double* para, int* c, int* ctrl);
void qcirc_free(QCirc* qcirc);